force-app/main/default/objects/Vacation__c/Vacation__c.object-meta.xml
<CustomObject>
    <label>Vacation</label>
    <nameField>
        <displayFormat>VAC-{000000}</displayFormat>
        <label>Vacation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vacations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>