force-app/main/default/objects/Vacation__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Vacations</relationshipLabel>
    <relationshipName>Vacations</relationshipName>
    <type>Lookup</type>
</CustomField>