force-app/main/default/objects/Vacation__c/fields/End_Date_for_Google__c.field-meta.xml
<CustomField>
    <fullName>End_Date_for_Google__c</fullName>
    <formula>Vacation_End_Date__c - 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Date for Google</label>
    <type>Date</type>
</CustomField>