force-app/main/default/objects/Vacation__c/fields/Name_for_Google__c.field-meta.xml
<CustomField>
    <fullName>Name_for_Google__c</fullName>
    <formula>Employee__r.Full_Name__c + &apos; (&apos; +  CASE(Vacation_Type__c, &apos;Holiday Season&apos;, &apos;H&apos;, &apos;Part Time&apos;, &apos;PT&apos;, &apos;OOO&apos;)  + &apos;) [&apos; +  Name + &apos;]&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name for Google</label>
    <type>Text</type>
</CustomField>