force-app/main/default/objects/Vacation__c/fields/Vacation_Days_Count__c.field-meta.xml
<CustomField>
    <fullName>Vacation_Days_Count__c</fullName>
    <formula>Vacation_End_Date__c - Vacation_Start_Date__c + 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vacation Days Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>