force-app/main/default/objects/Vacation__c/fields/Vacation_Type__c.field-meta.xml
<CustomField>
    <fullName>Vacation_Type__c</fullName>
    <label>Vacation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Day Off</fullName>
                <default>true</default>
                <label>Day Off</label>
            </value>
            <value>
                <fullName>Holiday Season</fullName>
            </value>
            <value>
                <fullName>Part Time</fullName>
            </value>
            <value>
                <fullName>Personal Vacation</fullName>
            </value>
            <value>
                <fullName>Sick Leave</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>