force-app/main/default/objects/Vacation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Employee__c</columns>
    <columns>Vacation_Start_Date__c</columns>
    <columns>Vacation_End_Date__c</columns>
    <columns>Vacation_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Vacation_Days_Count__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>